test/tasty/pos/src-2/tastytest/TestDelayedInternal.scala
package tastytest

object TestDelayedInternal {

  compiletimeHasChild[DelayedInternal[_]]("tastytest.DelayedInternal.Internal.Instance")

}
