test/tasty/neg/src-2/TestHKNest2_fail.scala
package tastytest

import HKNest._

object TestHKNest2 {

  def test14 = new HKClass_14[Quuux].foo(new Quuux[QuxArg])

}
